# Kendall-Simulator

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  mypy.ini  pyproject.toml  random_generator.py  run.py  simulation.py
.github/workflows/: ci.yml  release.yml
docs/source/: conf.py  index.rst  kendall_simulator.rst  modules.rst  src.rst
examples/: config copy.yaml
src/: exceptions.py  random_generator.py  simulation.py  simulator.py
src/kendall_simulator/: exceptions.py  random_generator.py  simulation.py  simulator.py
tests/: test_config.yaml  test_e2e.py  test_integration.py  test_random_generator.py  test_simulation.py  test_simulator.py  test_unity.py
tests/yaml/: example_single_queue.yaml  generated_numbers.yaml  generated_numbers_expected.txt  routing_queue.yaml  routing_queue_expected.txt  sequential_queue.yaml  sequential_queue_expected.txt  single_queue_expected.txt
